--- a/nightcity.html
+++ b/nightcity.html
@@ -178,7 +178,7 @@
   </p>
 
   <p>
-    Когда нас блять окружила толпа ебанных мальстрёмов. Узкий квартал. Ошибка в тайминге.<br>
+    Когда нас, блять, окружила толпа мальстрёмов. Узкий квартал и ебанный тайминг.<br>
     Если бы не совместная работа - нас бы знатно распидорило по асфальту так, что мать родная не узнала (или мать того мальстрёма, что чуть не обнулил меня. захаживал я к ней кхм).
   </p>
 
