--- a/nightcity.html
+++ b/nightcity.html
@@ -135,8 +135,8 @@
   </div>
 
   <p style="margin-top:14px">
-    От СМИ слишком много крика, грязи и мало толку. Каждый утюг орёт, каждый канал врёт по-своему.<br>
-    Я решил, что могу лучше. Тише. Точнее. Анонимно.
+    От СМИ слишком много крика, грязи и мало толку. Каждый утюг орёт, каждый канал врёт по-своему. Блогеры и стримеры мать родную продадут за палку балонской синт-колбасы<br>
+    Я решил, что могу лучше. Тише. Точечнее. Анонимно.
   </p>
 
   <p>
