--- a/nightcity.html
+++ b/nightcity.html
@@ -59,7 +59,7 @@
   </div>
 
   <p style="margin-top:14px">
-    LeakNews были единственным вариантом. Мне сильно повезло встретить их полевого агента, но я так и не понял кто они и нахуя им это. Ладно. Я отдал им больше, чем хотел и чем планировал.
+    LeakNews были единственным вариантом. Мне сильно повезло встретить их полевого агента, но я так и не понял кто они и нахуя им это. Ладно понял я, что какие-то косплееры Анонимус/Киллнет. Лишь бы помогли. Я отдал им больше, чем хотел и чем планировал.
     Novimmune - имена, цепочки, логистика, внутренние отчёты и все это говно. Всё, что когда-то называл «работой».
   </p>
 
