--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -240,7 +240,7 @@
   Субъект владеет и управляет
   небольшим торговым объектом,
   специализирующимся на распространении
-  брендансов и архивных видеоматериалов.
+  брендансов и архивных видеоматериалов (с его слов жемчужины коллекции - работы Светланой Басковой).
 </p>
         
   <p>
