--- a/field.html
+++ b/field.html
@@ -324,7 +324,7 @@
     Качество: нестабильное
   </p>
 
-  <audio controls preload="metadata" class="voice-log">
+  <audio controls preload="metadata" class="audio-log">
     <source src="assets/field_voice.mp3" type="audio/mpeg">
     Ваш браузер не поддерживает аудио.
   </audio>
