--- a/education.html
+++ b/education.html
@@ -241,10 +241,10 @@
   <div class="note">
     <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
     <div class="note__body">
-      В прошлый раз я держал его за руку до конца.<br>
-      В этот раз - я просто посмотрел на показатели
-      и переключился на следующего.<br><br>
-  Так будет правильнее.
+      Я думал со мнй что-то не так, но не в плохом смысле.<br>
+Быстрый успех в учёбе, навыки. Со временем это ощущение оформилось в простую мысль:
+если меня каждый раз ставят ближе к краю - значит, я для этого нужен.<br>
+Не избранный. Не лучший. Просто подходящий.
     </div>
   </div>
 
